# romeo_robot

./: README.md
romeo_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
romeo_bringup/launch/: romeo_full.launch  romeo_full_py.launch
romeo_dcm/: README.md  README_Romeo
romeo_dcm/romeo_dcm_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
romeo_dcm/romeo_dcm_bringup/config/: romeo_dcm.yaml
romeo_dcm/romeo_dcm_bringup/launch/: romeo_dcm_bringup_position.launch  romeo_dcm_bringup_remote.launch
romeo_dcm/romeo_dcm_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
romeo_dcm/romeo_dcm_control/config/: romeo_position_control.yaml  romeo_trajectory_control.yaml
romeo_dcm/romeo_dcm_control/launch/: romeo_dcm_position_control.launch  romeo_dcm_trajectory_control.launch  romeo_dcm_trajectory_control_full.launch
romeo_dcm/romeo_dcm_driver/: CHANGELOG.rst  CMakeLists.txt  README  package.xml
romeo_dcm/romeo_dcm_driver/cmake/: FindNAOqi.cmake
romeo_dcm/romeo_dcm_driver/include/romeo_dcm_driver/: romeo.h
romeo_dcm/romeo_dcm_driver/src/: romeo.cpp  romeo_driver.cpp
romeo_dcm/romeo_dcm_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
romeo_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
romeo_description/config/: urdf.rviz
romeo_description/launch/: display_generated.launch  romeo_desc_generated.launch
romeo_description/scripts/: generate_urdf.py
romeo_description/src/romeo_description/: gazeboUrdf.py  nao_dictionaries.py  romeo_dictionaries.py  urdf.py
romeo_description/urdf/romeoV1_generated_urdf/: romeo.urdf  romeo_generated_script.urdf  romeoarms.xacro  romeohands.xacro  romeohead.xacro  romeolegs.xacro  romeorobot.xacro  romeosensors.xacro  romeotorso.xacro  romeovisual_collisions.xacro
romeo_description/urdf/romeo_generated_urdf/: romeo.urdf  romeoGazebo.xacro  romeoTransmission.xacro  romeo_arms.xacro  romeo_cap.xacro  romeo_eyes.xacro  romeo_fingers.xacro  romeo_head.xacro  romeo_legs.xacro  romeo_material.xacro  romeo_robot.xacro  romeo_sensors.xacro  romeo_torso.xacro  romeo_visual_collisions.xacro
romeo_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
romeo_sensors/: CHANGELOG.rst  CMakeLists.txt  README.md  README_Romeo  package.xml
romeo_sensors/launch/: camera_depth.launch  cameras.launch
romeo_sensors/nao_camera/: CHANGELOG.rst  CMakeLists.txt  README_Romeo  package.xml  setup.py
romeo_sensors/nao_camera/cfg/: NaoCamera.cfg
romeo_sensors/nao_camera/launch/: .python.launch.swp  caliRGBD_NAO.launch  camera_depth_python.launch  camera_dynamic_reconfigure_python.launch
romeo_sensors/nao_camera/nodes/: camera.py  camera_depth.py
romeo_sensors/nodes/: camera_depth.py
romeo_sensors_py/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
romeo_sensors_py/launch/: camera.launch  cameras.launch
romeo_sensors_py/nodes/: camera.py
romeo_sensors_py/src/romeo_sensors/: romeo_camera.py
