<?xml version="1.0"?>
<package>
  <name>romeo_bringup</name>
  <version>0.1.5</version>
  <description>The romeo_bringup package 
    contains launch and configuration files required to bring ROS interfaces for Romeo up into a running state.
  </description>

  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <author email="natalia.lyubova@gmail.com">Natalia Lyubova</author>

  <license>Apache 2.0</license>
  
  <url type="website">http://www.ros.org/wiki/romeo_bringup</url>
  <url type="repository">https://github.com/ros-aldebaran/romeo_robot</url>
  <url type="bugtracker">https://github.com/ros-aldebaran/romeo_robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>naoqi_driver</run_depend>
  <run_depend>romeo_description</run_depend>
  <run_depend>romeo_sensors_py</run_depend>


</package>
