<?xml version="1.0"?>
<package>
  <name>romeo_description</name>
  <version>0.1.4</version>
  <description>The romeo_description package</description>

  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>
  <maintainer email="mikael.arguedas@gmail.com">Mikael Arguedas</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/romeo_description</url>
  <url type="bugtracker">https://github.com/ros/romeo_robot/issues</url>
  <url type="repository">https://github.com/ros/romeo_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>message_filters</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
