<?xml version="1.0"?>
<package>
  <name>romeo_description</name>
  <version>0.1.5</version>
  <description>The romeo_description package</description>

  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/romeo_description</url>
  <url type="bugtracker">https://github.com/ros/romeo_robot/issues</url>
  <url type="repository">https://github.com/ros/romeo_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
