<?xml version="1.0"?>
<package>
  <name>romeo_robot</name>
  <version>0.1.4</version>
  <description>The romeo_robot metapackage</description>

  <author email="mikael.arguedas@gmail.com">Mikael Arguedas</author>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

  <run_depend>romeo_bringup</run_depend>
  <run_depend>romeo_description</run_depend>
  <run_depend>romeo_sensors_py</run_depend>

</package>
