<?xml version="1.0"?>
<package>
  <name>romeo_sensors</name>
  <version>0.0.9</version>
  <description>The romeo_sensors package</description>

  <maintainer email="hris2003@gmail.com">Ha Dang</maintainer>

  <license>BSD</license>

  <author email="hris2003@gmail.com">Ha Dang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>naoqi_sensors</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>naoqi_sensors</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
