<?xml version="1.0"?>
<package>
  <name>romeo_sensors</name>
  <version>0.0.13</version>
  <description>The romeo_sensors package</description>

  <maintainer email="hris2003@gmail.com">Ha Dang</maintainer>

  <license>BSD</license>

  <author email="hris2003@gmail.com">Ha Dang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>naoqi_sensors_py</run_depend>
  <run_depend>rospy</run_depend>
</package>
