<?xml version="1.0"?>
<package format="2">
  <name>romeo_sensors_py</name>
  <version>0.1.4</version>
  <description>Package that adds the depth camera to Romeo</description>

  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>BSD</license>

  <author email="hris2003@gmail.com">Ha Dang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>naoqi_sensors_py</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
